<resources>
    <string name="app_name">Fitness</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_warm_up">Warm up</string>
    <string name="lbl_note">Note:</string>
    <string name="lbl_9999973543">9999973543</string>
    <string name="lbl_payment_page">Payment Page</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_21_oct">21 Oct</string>
    <string name="lbl_workshop_name">Workshop name</string>
    <string name="msg_similar_worksho">Similar Workshops</string>
    <string name="lbl_day12">Day1</string>
    <string name="lbl_view_details">View Details</string>
    <string name="lbl_payable_amount">Payable Amount</string>
    <string name="lbl_plans">Plans</string>
    <string name="lbl_strength">Strength</string>
    <string name="lbl_plyometric_4">Plyometric 4</string>
    <string name="lbl_home">Home</string>
    <string name="msg_trial_practical">Trial Practical Exams</string>
    <string name="msg_already_have_an">Already have an account? </string>
    <string name="msg_already_have_an1">Don\'t have an account? </string>
    <string name="lbl_dob2">DOB</string>
    <string name="lbl_state">State</string>
    <string name="msg_enter_the_otp_s">Enter the OTP sent to your registered mobile \n number.</string>
    <string name="lbl_dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipis cing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class apt ent taciti soc iosqu ad litora torquent per conubia nostra, per inceptos him enae os. Curabitur tempus urna at turpis condim entu m lobortis. Ut commodo efficit ur neque.ac aliquet odio mattis. Class apt ent taciti soc iosqu ad litora torquent per conubia nostra, per inceptos him enae os. Curabitur tempus urna at turpis condim entu m lobortis. Ut commodo efficit ur neque.</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipis cing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class apt ent taciti soc iosqu ad litora torquent per conubia nostra, per inceptos him enae os. Curabitur tempus urna at turpis condim entu m lobortis. Ut commodo efficit ur neque.</string>
    <string name="msg_segment_specifi">Segment Specific Training</string>
    <string name="lbl_netbanking">Netbanking</string>
    <string name="lbl_off">Off</string>
    <string name="lbl_good_afternoon">Good Afternoon</string>
    <string name="lbl_webinar">Webinar</string>
    <string name="lbl_dark_mode">Dark Mode</string>
    <string name="lbl_testimonals">Testimonals</string>
    <string name="lbl_phase_2">Phase 2</string>
    <string name="lbl_phase_1">Phase 1</string>
    <string name="lbl_23_oct">23 Oct</string>
    <string name="lbl_phase_4">Phase 4</string>
    <string name="lbl_phase_3">Phase 3</string>
    <string name="lbl_sst_1">SST-1</string>
    <string name="lbl_article_name">Article Name</string>
    <string name="lbl_trainers">Trainers</string>
    <string name="lbl_phase_9">Phase 9</string>
    <string name="lbl_cool_down">Cool Down</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="msg_progress_tracke">Progress Tracker</string>
    <string name="msg_dorem_ipsum_dol">Dorem ipsum dolor sit amet, consectetur adipiscing elit. jeod jilisd klipd.</string>
    <string name="lbl_phase_6">Phase 6</string>
    <string name="lbl_phase_5">Phase 5</string>
    <string name="lbl_phase_8">Phase 8</string>
    <string name="lbl_phase_7">Phase 7</string>
    <string name="lbl_plyometric_2">Plyometric 2</string>
    <string name="lbl_active_plans">Active Plans</string>
    <string name="msg_start_assessmen">Start Assessment</string>
    <string name="lbl_plyometric_3">Plyometric 3</string>
    <string name="lbl_plyometric_1">Plyometric 1</string>
    <string name="lbl_phase_10">Phase 10</string>
    <string name="lbl_articles">Articles</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_name_athlete">Athlete Plans</string>
    <string name="lbl_name_trainer">Trainer Plans</string>
    <string name="lbl_2_10_completed">2/10 Completed</string>
    <string name="msg_choose_payment">Choose Payment Method</string>
    <string name="msg_strength_3_ta">Strength ( 3 tasks )</string>
    <string name="msg_good_afternoon">Good Afternoon,</string>
    <string name="msg_share_app_via">Share App Via...</string>
    <string name="msg_plyometric_4">Plyometric ( 4 tasks )</string>
    <string name="lbl_pay_500">Pay \u20b9500</string>
    <string name="lbl_mobile2">Mobile</string>
    <string name="lbl_app_settings">App Settings</string>
    <string name="lbl_logo">LOGO</string>
    <string name="msg_payment_done_su">Payment Done Successfully</string>
    <string name="lbl_dob">DOB : </string>
    <string name="lbl_ashish">Ashish!</string>
    <string name="lbl_tomorrow_tasks">Tomorrow Tasks</string>
    <string name="lbl_workshop_name2">Workshop Name</string>
    <string name="lbl_26_oct">26 Oct</string>
    <string name="lbl_upi">UPI</string>
    <string name="msg_complete_today">Complete today task start this</string>
    <string name="msg_profile_setting">Profile Settings</string>
    <string name="msg_credit_debit">Credit / Debit card</string>
    <string name="lbl_completed">Completed</string>
    <string name="msg_sorem_ipsum_dol">Sorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="msg_workshop_descri">Workshop Description:</string>
    <string name="lbl_day_56_60">DAY 56-60</string>
    <string name="lbl_29_oct_30_oct">29 Oct - 30 Oct</string>
    <string name="lbl_weightloss">Weightloss</string>
    <string name="lbl_day_6">Day 6</string>
    <string name="lbl_day_7">Day 7</string>
    <string name="lbl_day_4">Day 4</string>
    <string name="lbl_task_name">Task Name</string>
    <string name="lbl_day_5">Day 5</string>
    <string name="lbl_day_2">Day 2</string>
    <string name="lbl_day_3">Day 3</string>
    <string name="lbl_view_plan">View Plan</string>
    <string name="lbl_day_1">Day 1</string>
    <string name="msg_practical_asses">Practical Assessments</string>
    <string name="lbl_benefits">Benefits:</string>
    <string name="lbl_level_4">Level 4</string>
    <string name="lbl_level_5">Level 5</string>
    <string name="lbl_city">City</string>
    <string name="lbl_9000">\u20b99000</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_ashish_b">Ashish B</string>
    <string name="lbl_training_videos">Training Videos</string>
    <string name="lbl_plans_active">Plans Active : </string>
    <string name="lbl_go_to_home">Go to home</string>
    <string name="lbl_zip_code">ZIP Code</string>
    <string name="msg_plan_descriptio">Plan Description:</string>
    <string name="lbl_day_31_55">DAY 31-55</string>
    <string name="lbl_500">\u20b9500</string>
    <string name="lbl_weightgain">Weightgain</string>
    <string name="lbl_22_oct">22 Oct</string>
    <string name="lbl_pay_9000">Pay \u20b99000</string>
    <string name="lbl_workshops">Workshops</string>
    <string name="msg_askkjk_gmail_co">askkjk@gmail.com</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_title_1">Title 1</string>
    <string name="lbl_level_1">Level 1</string>
    <string name="lbl_level_2">Level 2</string>
    <string name="msg_yorem_ipsum_dol">Yorem ipsum dolor sit amet, conse ctetur adipiscing elit....</string>
    <string name="lbl_buy_plan">Buy Plan</string>
    <string name="lbl_level_3">Level 3</string>
    <string name="lbl_platform_fee">Platform Fee</string>
    <string name="lbl_26_05_1998">26-05-1998</string>
    <string name="lbl_messenger">Messenger</string>
    <string name="lbl_0_3">0/3</string>
    <string name="lbl_91">+91</string>
    <string name="lbl_task_reminders">Task Reminders</string>
    <string name="lbl_0_4">0/4</string>
    <string name="lbl_workshop_1">Workshop 1</string>
    <string name="lbl_day_1_3">DAY 1-3</string>
    <string name="lbl_mobile">Mobile : </string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipis cing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti soc iosqu ad litora torquent per conubia nostra, per inceptos him enaeos. Curabitur tempus urna at turpis condimentu m lobortis. Ut commodo efficit ur neque.</string>
    <string name="lbl_name">Name : </string>
    <string name="lbl_facebook">Facebook</string>
    <string name="msg_allow_notificat">Allow Notifications</string>
    <string name="lbl_activities">Activities:</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_name2">Name</string>
    <string name="lbl_24_oct">24 Oct</string>
    <string name="lbl">, </string>
    <string name="lbl_today_tasks">Today Tasks</string>
    <string name="lbl_submit">Submit</string>
    <string name="msg_otp_will_be_sen">OTP will be sent to this mobile number to verify</string>
    <string name="lbl_yoga">Yoga</string>
    <string name="lbl_0_5_completed">0/5 Completed</string>
    <string name="lbl_plyometrics">Plyometrics</string>
    <string name="msg_didn_t_receive">Didn\u2019t Receive OTP ?</string>
    <string name="lbl_share_app">Share App</string>
    <string name="msg_start_your_fitn">Start Your Fitness Journney Now!</string>
    <string name="lbl_day_16_30">DAY 16-30</string>
    <string name="lbl_01">01</string>
    <string name="lbl_3">3</string>
    <string name="lbl_25_oct">25 Oct</string>
    <string name="lbl_whatsapp">Whatsapp</string>
    <string name="lbl_00">\u20b900</string>
    <string name="lbl_plan_name">Plan name</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_recipies">Recipies</string>
    <string name="lbl_feeds">Feeds</string>
    <string name="lbl_latest_articles">Latest Articles</string>
    <string name="lbl_7383939397">7383939397</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_login1">Signup</string>
    <string name="msg_worem_ipsum_dol">Worem ipsum dolor sit amet, cons ectetur adipiscing elit. Worem ipsum dolor sit amet, consectetur adipiscing elit. ...</string>
    <string name="lbl_paypal">Paypal</string>
    <string name="lbl_warm_up2">Warm Up</string>
    <string name="msg_similar_trainer">Similar Trainer Plans</string>
    <string name="lbl_tags">Tags</string>
    <string name="lbl_athletes">Athletes</string>
    <string name="lbl_all">All</string>
    <string name="lbl_testimonials">Testimonials</string>
    <string name="lbl_day_4_15">DAY 4-15</string>
    <string name="lbl_pay">Pay </string>
    <string name="lbl_strength_3">Strength 3</string>
    <string name="lbl_strength_2">Strength 2</string>
    <string name="msg_enter_your_numb">Enter Your Number</string>
    <string name="lbl_strength_1">Strength 1</string>
    <string name="lbl_plan_fees">Plan Fees</string>
    <string name="lbl_on">on</string>
    <string name="lbl_27_oct">27 Oct</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_weight_loss2">Weight loss</string>
    <string name="lbl_update">Update</string>
    <string name="msg_forem_ipsum_dol">Forem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="lbl_attend">Attend</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>