<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="sstOneFourVM" type="com.fitness.app.modules.sstonefour.data.viewmodel.SstOneFourVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSSTOneFour"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStyle">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowright"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_239pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_60pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_white_a700_radius_15"
                    android:id="@+id/btnArrowright"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_width="@dimen/_30pxh"
                    android:paddingHorizontal="@dimen/_7pxh"
                    android:paddingVertical="@dimen/_7pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrowright_gray_900" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSSTOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{sstOneFourVM.sstOneFourModel.txtSSTOne}"
                    style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_sst_1"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumnphasecounter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_2">
            <HorizontalScrollView android:fillViewport="true"
                android:id="@+id/horizontalScrollHorizontalscrollphasecounter"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:scrollbars="none">
                <LinearLayout android:id="@+id/linearRowphasecounter"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounter"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounter}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_1"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterOne}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_2"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterTwo}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_3"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterThree"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterThree}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_4"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterFour"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterFour}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_5"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterFive"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_weight="0.38"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterFive}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_6"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterSix"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterSix}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_7"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterSeven"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterSeven}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_8"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterEight"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.39"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterEight}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_9"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPhaseCounterNine"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.45"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{sstOneFourVM.sstOneFourModel.txtPhaseCounterNine}"
                        style="@style/txtNunitosemibold10" tools:text="@string/lbl_phase_10"/>
                </LinearLayout>
            </HorizontalScrollView>
            <ImageView android:id="@+id/imageGroup100000210"
                android:layout_height="@dimen/_11pxh"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_group100000210_2"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group100000210_2"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTrialPractical"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{sstOneFourVM.sstOneFourModel.txtTrialPractical}"
            style="@style/txtRalewayromanregular10" tools:text="@string/msg_trial_practical"/>
        <FrameLayout android:id="@+id/frameStackrectangle441"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_110pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_28pxv" android:layout_width="@dimen/_320pxh">
            <ImageView android:id="@+id/imageRectangle441"
                android:layout_gravity="start"
                android:layout_height="@dimen/_110pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_rectangle441}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle441"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnStartAssessmentOne"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_25pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_107pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_13pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/msg_start_assessmen"
                android:textAllCaps="false"
                style="@style/btnGradientRounded_1" tools:text="@string/msg_start_assessmen"/>
        </FrameLayout>
    </LinearLayout>
</layout>
