<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="feedsOneVM" type="com.fitness.app.modules.feedsone.data.viewmodel.FeedsOneVM"/>
    </data>
    <androidx.core.widget.NestedScrollView android:clipToPadding="false"
        android:fillViewport="true"
        android:id="@+id/scrollViewScrollview"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntags"
            android:layout_height="match_parent"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtTags"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{feedsOneVM.feedsOneModel.txtTags}"
                style="@style/txtRalewayromansemibold12_2" tools:text="@string/lbl_tags"/>
            <HorizontalScrollView android:fillViewport="true"
                android:gravity="end"
                android:id="@+id/horizontalScrollHorizontalscrollframefour"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:scrollbars="none">
                <LinearLayout android:id="@+id/linearRowframefour"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFrameFour"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{feedsOneVM.feedsOneModel.txtFrameFour}"
                        style="@style/txtGradientRounded"
                        tools:text="@string/lbl_all"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFrameFive"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/_9pxv"
                        android:paddingEnd="@dimen/_21pxh"
                        android:paddingStart="@dimen/_21pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@{feedsOneVM.feedsOneModel.txtFrameFive}"
                        style="@style/txtRoundedOutline_1"
                        tools:text="@string/lbl_weightloss"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFrameSix"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/_9pxv"
                        android:paddingEnd="@dimen/_16pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@{feedsOneVM.feedsOneModel.txtFrameSix}"
                        style="@style/txtRoundedOutline_1" tools:text="@string/lbl_weightgain"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFrameTen"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_23pxh"
                        android:paddingStart="@dimen/_23pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@{feedsOneVM.feedsOneModel.txtFrameTen}"
                        style="@style/txtRoundedOutline_1" tools:text="@string/lbl_recipies"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFrameSixteen"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{feedsOneVM.feedsOneModel.txtFrameSixteen}"
                        style="@style/txtRoundedOutline_1" tools:text="@string/lbl_yoga"/>

                </LinearLayout>
            </HorizontalScrollView>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLatestArticlesOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{feedsOneVM.feedsOneModel.txtLatestArticlesOne}"
                style="@style/txtRalewayromansemibold16_2"
                tools:text="@string/lbl_latest_articles"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerFeedsOne"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                itemSpace="@{@dimen/_15pxh}"
                tools:itemCount="1"
                tools:listitem="@layout/row_feeds_one"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
